# CMPE275mini2

basecamp/: .gitignore  CMakeLists.txt  README.md  temp_config.json
basecamp/configs/: topology.json
basecamp/include/: basecamp_client.h  basecamp_service_impl.h
basecamp/proto/: basecamp.proto
basecamp/scripts/: build.py  get_ip.py  memory_performance_test.py  performance_test.py  setup_overlay.py  test_communication.py
basecamp/src/cpp_client/: CMakeLists.txt  basecamp_client.cpp  client_main.cpp
basecamp/src/python_client/: basecamp_client.py  generate_proto.py  requirements.txt
basecamp/src/python_client/proto/: basecamp_pb2.py  basecamp_pb2_grpc.py
basecamp/src/server/: CMakeLists.txt  basecamp_service_impl.cpp  server_main.cpp
basecamp/tests/integration/: CMakeLists.txt  integration_test.cpp
basecamp/tests/unit/: CMakeLists.txt  client_test.cpp  server_test.cpp
